[package]
name = "tokio-vsock"
version = "0.1.1"
authors = ["fsyncd"]
description = "Asynchronous Virtio socket support for Rust"
repository = "https://github.com/fsyncd/tokio-vsock"
license = "Apache-2.0"
edition = "2018"
exclude = ["test_fixture"]

[dependencies]
futures = "0.3.5"
iovec = "0.1.4"
libc = "0.2.65"
mio = "0.6.20"
nix = "0.15.0"
tokio = { version = "0.2", features = ["full"] }
vsock = "0.1.4"

[dev-dependencies]
hyper = "0.12.35"